# OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: __init__.py  environment.py  models.py  reward.py
grader/: __init__.py  grader.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
tests/: test_environment.py  test_server.py
