[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-robot-openenv"
version = "2.0.0"
description = "OpenEnv-compatible factory robot coordination benchmark."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openai",
    "openenv-core>=0.2.0",
    "pydantic",
    "requests",
    "uvicorn",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "grader", "server", "tasks"]
py-modules = ["inference", "main"]
